--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,7 @@
+= Notice:
+
+This is no longer being used. Decided to clean up and start from scratch. The new dotfiles are located at the same old url: git://github.com/NickClark/dotfiles. Much is the same and installation is slightly simpler.
+
 = Nick Clarks Dot Files
 
 These are config files to set up a system the way I like it.
@@ -7,7 +11,7 @@ This also uses oh-my-zsh and akitas vimfiles which are included as submodules.
 
 == Installation
 
-  git clone git://github.com/NickClark/dotfiles ~/.dotfiles
+  git clone git://github.com/NickClark/dotfiles_old ~/.dotfiles_old
   cd ~/.dotfiles
   git submodule init
   git submodule update
